--- a/device-motion/index.html
+++ b/device-motion/index.html
@@ -4,21 +4,21 @@
 <body>
 <h2>DeviceMotionEvent.acceleration:</h2>
 <ul>
-	<li>x: <id = "device-motion-acceleration-x"></li>
-	<li>y: <id = "device-motion-acceleration-y"></li>
-	<li>z: <id = "device-motion-acceleration-z"></li>
+	<li>x: <span id = "device-motion-acceleration-x"></span></li>
+	<li>y: <span id = "device-motion-acceleration-y"></span></li>
+	<li>z: <span id = "device-motion-acceleration-z"></span></li>
 </ul>
 <h2>DeviceMotionEvent.accelerationIncludingGravigy:</h2>
 <ul>
-	<li>x: <id = "device-motion-acceleration-including-gravity-x"></li>
-	<li>y: <id = "device-motion-acceleration-including-gravity-y"></li>
-	<li>z: <id = "device-motion-acceleration-including-gravity-z"></li>
+	<li>x: <span id = "device-motion-acceleration-including-gravity-x"></span></li>
+	<li>y: <span id = "device-motion-acceleration-including-gravity-y"></span></li>
+	<li>z: <span id = "device-motion-acceleration-including-gravity-z"></span></li>
 </ul>
 <h2>DeviceMotionEvent.rotationRate:</h2>
 <ul>
-	<li>alpha: <id = "device-motion-rotation-rate-alpha"></li>
-	<li>beta: <id = "device-motion-rotation-rate-beta"></li>
-	<li>gamma: <id = "device-motion-rotation-rate-gamma"></li>
+	<li>alpha: <span id = "device-motion-rotation-rate-alpha"></span></li>
+	<li>beta: <span id = "device-motion-rotation-rate-beta"></span></li>
+	<li>gamma: <span id = "device-motion-rotation-rate-gamma"></span></li>
 </ul>
 
 <script>
